gcc/testsuite/gm2/iso/fail/badtype.mod
MODULE badtype ;

FROM SYSTEM IMPORT TSIZE ;

TYPE
   foo = CARDINAL ;
BEGIN
   IF TSIZE (Foo) = 1
   THEN
   END
END badtype.
